fix default styles on iphone for form inputs

--- a/app/assets/stylesheets/_habit_form.scss
+++ b/app/assets/stylesheets/_habit_form.scss
@@ -32,6 +32,7 @@
       font-size: inherit;
       font-weight: inherit;
       padding: 0.5rem;
+      -webkit-appearance: none;
     }
 
     input[type=submit] {
